<!-- Copyright 2017 Google Inc.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License. -->

<resources>
    <string name="app_name">Vinted</string>
    <string name="action_settings">Settings</string>
    <string name="hint_word">Word…</string>
    <string name="button_save">Save</string>
    <string name="empty_not_saved">Product not saved because it is empty.</string>
    <string name="add_word">Add word</string>
    <string name="hint_price">Price…</string>
    <string name="button_addItemActivity">Add an Item</string>
    <string name="button_yourStoreActivity">Your Store</string>
    <string name="button_buyerMessageActivity">Buyer Messages</string>
    <string name="button_salesHistoryActivity">Sales History</string>
    <string name="button_editProduct">Edit Product</string>


    <string name="hint_description">Description…</string>
    <string name="hint_name">Name…</string>


</resources>